--- a/src/components/Output/Output.css
+++ b/src/components/Output/Output.css
@@ -1,3 +1,27 @@
-.output__box img{
-    width: 100%;
+.yellow{
+    background-color: yellow;
+    width: 100vw;
+    min-height: 100vh;
+    position: absolute;
+    top:0;
+    right: 0;
+    z-index: -1;
+}
+.blue{
+    background-color: deepskyblue;
+    width: 100vw;
+    min-height: 100vh;
+    position: absolute;
+    top:0;
+    right: 0;
+    z-index: -1;
+}
+.white{
+    background-color: cadetblue;
+    width: 100vw;
+    min-height: 100vh;
+    position: absolute;
+    top:0;
+    right: 0;
+    z-index: -1;
 }
